# nechestniy_znak

./: .gitignore  LICENSE  README.md  nechestniy_znak.py  pyproject.toml  test.py
.github/workflows/: publish-to-pypi.yml
src/nechestniy_znak/: __init__.py  crpt.py  egais.py  lib.py
